<resources>
    <string name="app_name">Whats Near Me</string>
    <string name="copyright">Whats Near Me &#169; 2015 Barak Cohen</string>
    <string name="rights">All rights reserved.</string>
    <string name="no_wifi_near">No wi-fi networks in range</string>
    <string name="no_bluetooth_near">No bluetooth devices in range</string>
    <string name="no_phone_with_app_near">No phones with app in range</string>
    <string name="toast_device_discoverable">Device is discoverable!</string>
    <string name="toast_device_already_discoverable">Device is already discoverable!</string>

    <!-- Menu Options -->
    <string name="action_settings">Settings</string>
    <string name="action_log">See log</string>
    <string name="action_make_device_visible">Make device visible</string>
    <string name="action_stop_scanning">Stop Scanning</string>
    <string name="action_start_scanning">Start Scanning</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>

    <!-- Log Activity -->
    <string name="log_title">Log</string>
    <string name="clear_log">Clear log</string>
    <string name="action_clear_log">Clear log</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_wifi_min_level_key">com.onetribe.whatsnearme.WIFI_MIN_LEVEL</string>
    <string name="pref_wifi_min_level">Wi-fi min level (dBm)</string>
    <string name="pref_default_wifi_min_level">-90</string>
    <string name="pref_bluetooth_interval_key">com.onetribe.whatsnearme.BLUETOOTH_INTERVAL</string>
    <string name="pref_bluetooth_interval">Bluetooth Interval (in seconds)</string>
    <string name="pref_default_bluetooth_interval">10</string>
    <string name="pref_bluetooth_discoverable_time_key">com.onetribe.whatsnearme.BLUETOOTH_DISCOVERABLE_TIME</string>
    <string name="pref_bluetooth_discoverable_time">Device visibility time</string>
    <string name="pref_default_bluetooth_discoverable_time">300</string>
    <string name="pref_bluetooth_le_scan_time_key">com.onetribe.whatsnearme.BLUETOOTH_LE_SCAN_TIME</string>
    <string name="pref_bluetooth_le_scan_time">Time to scan Bluetooth LE devices</string>
    <string name="pref_default_bluetooth_le_scan_time">10</string>
    <string name="pref_log_limit_key">com.onetribe.whatsnearme.LOG_LIMIT</string>
    <string name="pref_log_limit">Limit of log messages</string>
    <string name="pref_default_log_limit">100</string>
    <string name="pref_notifications_on_key">com.onetribe.whatsnearme.NOTIFICATIONS</string>
    <string name="pref_notifications_on">Notifications</string>
    <bool name="pref_default_notifications_on">true</bool>
    <string name="pref_bluetooth_le_enable_key">com.onetribe.whatsnearme.BLUETOOTH_LE_ENABLED</string>
    <string name="pref_bluetooth_le_enable">Enable Bluetooth LE Scan</string>
    <bool name="pref_default_bluetooth_le_enable">false</bool>

    <!-- Add Device With App Activity -->
    <string name="title_activity_devices_with_app">Devices with this App</string>
    <string name="devices_with_app_txt">Devices with this app</string>
    <string name="no_devices_included_txt">No devices included</string>
    <string name="action_add_device_with_app">Add new device with this app</string>
    <string name="action_device_with_app_list_label">Devices with this app</string>
    <string name="mac_address_label_txt">Mac Address:</string>
    <string name="device_with_app_id_label_txt">Phone ID:</string>
    <string name="mac_address_txt_hint">00</string>
    <string name="phone_id_txt_hint">The phone\'s name</string>
    <string name="hexa_chars">0123456789ABCDEF</string>
    <string name="mac_address_separator">:</string>
    <string name="invalid_mac_address_error_message">Invalid Mac Address</string>
    <string name="invalid_phone_id_error_message">Phone ID must be specified</string>
    <string name="add_device_with_app_desc" />
    <string name="my_mac_address_txt_label">My Mac Address:</string>
    <string name="dialog_save_button_txt">Save</string>
    <string name="dialog_cancel_button_txt">Cancel</string>
</resources>
