<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="one.tribe.whatsnearme.ui.AboutActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/aboutAppName"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aboutAppVersionTxt"
        android:layout_gravity="center"
        android:textSize="@dimen/abc_text_size_small_material" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/ic_whastnearme"
        android:layout_gravity="center"
        android:minHeight="100dp"
        android:padding="10dp"
        android:nestedScrollingEnabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:id="@+id/aboutCopyright"
        android:layout_gravity="center"
        android:textIsSelectable="false"
        android:textSize="@dimen/abc_text_size_small_material" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rights"
        android:id="@+id/aboutRights"
        android:layout_gravity="center"
        android:textSize="@dimen/abc_text_size_small_material" />
</LinearLayout>
