<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2"
        android:layout_marginTop="10dp"
        android:id="@+id/showDeviceLayout">

        <TextView
            android:id="@+id/listDeviceWithAppIdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_with_app_id_label_txt"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="@dimen/labels"
            android:layout_alignBottom="@+id/listDeviceWithAppId" />

        <EditText
            android:id="@+id/listDeviceWithAppId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@+id/editButton"
            android:layout_toRightOf="@+id/listDeviceWithAppIdLabel"
            android:layout_alignStart="@+id/listMacAddress"
            android:textSize="@dimen/forms"
            android:textAlignment="center"
            android:hint="@string/phone_id_txt_hint"
            android:maxLength="20"
            android:enabled="false" />

        <TextView
            android:id="@+id/listMacAddressLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mac_address_label_txt"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:textSize="@dimen/labels"
            android:layout_alignBottom="@+id/listMacAddress"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/listMacAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@+id/editButton"
            android:layout_toRightOf="@+id/listMacAddressLabel"
            android:layout_below="@+id/listDeviceWithAppId"
            android:textSize="@dimen/forms"
            android:textAlignment="center"
            android:hint="@string/mac_address_txt_hint"
            android:enabled="false" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editButton"
            android:src="@drawable/ic_mode_edit_black_24dp"
            android:layout_alignParentRight="false"
            android:layout_centerVertical="true"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_toLeftOf="@+id/deleteButton" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deleteButton"
            android:layout_alignParentBottom="false"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_delete_black_24dp"
            android:layout_centerVertical="true" />

    </RelativeLayout>

</LinearLayout>