<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="one.tribe.whatsnearme.deviceswithapp.DevicesWithAppActivity"
    tools:showIn="@layout/activity_devices_with_app">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="false"
        android:fillViewport="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="false">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/myMacAddressLayout"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/my_mac_address_txt_label"
                    android:id="@+id/myAddressLabel"
                    android:textSize="@dimen/headline"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/myMacAddress"
                    android:textSize="@dimen/headline"
                    android:layout_gravity="center_vertical"
                    android:singleLine="false"
                    android:textStyle="bold"
                    android:background="@drawable/shadow_204023"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:enabled="true"
                    android:textIsSelectable="true" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:id="@+id/myMacAddressSeparator"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/myMacAddressLayout" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/devices_with_app_txt"
                android:id="@+id/labelDeviceWithAppTxt"
                android:textSize="@dimen/headline"
                android:padding="10dp"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/myMacAddressSeparator" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:id="@+id/devicesWithAppSeparator"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/labelDeviceWithAppTxt"
                android:visibility="gone" />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/devicesWithAppList"
                android:headerDividersEnabled="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentTop="false"
                android:layout_below="@+id/devicesWithAppSeparator"
                android:visibility="gone" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/addNewDeviceWithAppLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="2"
                android:background="@drawable/shadow_204023"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_gravity="bottom"
                android:layout_below="@+id/devicesWithAppList">

                <TextView
                    android:id="@+id/newDeviceWithAppIdLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_with_app_id_label_txt"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textSize="@dimen/labels"
                    android:layout_alignBottom="@+id/newDeviceWithAppId" />

                <EditText
                    android:id="@+id/newDeviceWithAppId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_toLeftOf="@+id/addButton"
                    android:layout_toRightOf="@+id/newDeviceWithAppIdLabel"
                    android:layout_alignStart="@+id/newMacAddress"
                    android:textSize="@dimen/forms"
                    android:textAlignment="center"
                    android:hint="@string/phone_id_txt_hint"
                    android:maxLength="20"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/newMacAddressLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mac_address_label_txt"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:textSize="@dimen/labels"
                    android:layout_alignBottom="@+id/newMacAddress"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/newMacAddressTxt"
                    android:visibility="gone"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_toLeftOf="@+id/addButton"
                    android:layout_toRightOf="@+id/newMacAddressLabel"
                    android:layout_below="@+id/newDeviceWithAppId"
                    android:id="@+id/newMacAddress"
                    android:gravity="center_horizontal">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/macAddressFirstPart"
                        android:singleLine="true"
                        android:textSize="@dimen/forms"
                        android:maxLength="2"
                        android:digits="@string/hexa_chars"
                        android:inputType="textCapCharacters"
                        android:hint="@string/mac_address_txt_hint" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mac_address_separator"
                        android:layout_marginLeft="-3dp"
                        android:layout_marginRight="-3dp"
                        android:textSize="@dimen/forms" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textCapCharacters"
                        android:id="@+id/macAddressSecondPart"
                        android:singleLine="true"
                        android:textSize="@dimen/forms"
                        android:maxLength="2"
                        android:digits="@string/hexa_chars"
                        android:hint="@string/mac_address_txt_hint" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mac_address_separator"
                        android:layout_marginLeft="-3dp"
                        android:layout_marginRight="-3dp"
                        android:textSize="@dimen/forms" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textCapCharacters"
                        android:id="@+id/macAddressThirdPart"
                        android:textSize="@dimen/forms"
                        android:singleLine="true"
                        android:maxLength="2"
                        android:digits="@string/hexa_chars"
                        android:hint="@string/mac_address_txt_hint" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mac_address_separator"
                        android:layout_marginLeft="-3dp"
                        android:layout_marginRight="-3dp"
                        android:textSize="@dimen/forms" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/macAddressFourthPart"
                        android:textSize="@dimen/forms"
                        android:singleLine="true"
                        android:maxLength="2"
                        android:digits="@string/hexa_chars"
                        android:inputType="textCapCharacters"
                        android:hint="@string/mac_address_txt_hint" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mac_address_separator"
                        android:layout_marginLeft="-3dp"
                        android:layout_marginRight="-3dp"
                        android:textSize="@dimen/forms" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textCapCharacters"
                        android:id="@+id/macAddressFifthPart"
                        android:textSize="@dimen/forms"
                        android:singleLine="true"
                        android:maxLength="2"
                        android:digits="@string/hexa_chars"
                        android:hint="@string/mac_address_txt_hint" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mac_address_separator"
                        android:layout_marginRight="-3dp"
                        android:layout_marginLeft="-3dp"
                        android:textSize="@dimen/forms" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/macAddressSixthPart"
                        android:textSize="@dimen/forms"
                        android:singleLine="true"
                        android:maxLength="2"
                        android:digits="@string/hexa_chars"
                        android:inputType="textCapCharacters"
                        android:hint="@string/mac_address_txt_hint" />


                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addButton"
                    android:src="@drawable/ic_add_circle_black_48dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:onClick="addDeviceWithApp"
                    android:contentDescription="@string/add_device_with_app_desc" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
